--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
-name: "TimeSpawner"
-version: 1.0
-author: "TheProbleemm"
-main: "theprobleemm.timespawner.Spawner"
+name: "Spawner"
+version: 0.1
+author: "Stutiguias,TheProbleemm"
+main: "me.stutiguias.spawner"
 commands:
   setmob:
     description: "§bCreates a MobSpawner"
