--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,16 +1,7 @@
 name: "Spawner"
 version: 0.1
 author: "Stutiguias,TheProbleemm"
-main: "me.stutiguias.spawner"
+main: "me.stutiguias.spawner.init.Spawner"
 commands:
-  setmob:
-    description: "§bCreates a MobSpawner"
-    usage: "§4Use: §b/setmob SpawnName TypeMob Quantity time"
-  confmob:
-    description: "§bConfigures a MOB already created."
-    usage: "§4Use: §b/spawnconf SpawnName TypeMob Quantity Time"
-  delmob:
-    description: "§bDeletes a spawner."
-    usage: "§4Use: §b/delspawn NameOfSpawner"
-  spawners:
-    description: "§bList of spawners"
+  sp:
+    description: "§bcommands"
