--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,11 @@
     <dependencies>
 		
         <dependency>
-                <groupId>org.bukkit</groupId>
-                <artifactId>bukkit</artifactId>
-                <version>${bukkit.version}</version>
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>LATEST</version>
+            <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         
         <dependency>
