Add Dragon Settings

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <includes>
           <include>plugin.yml</include>
           <include>config.yml</include>
+          <include>dragon.yml</include>
         </includes>
       </resource>
 
