--- a/pom.xml
+++ b/pom.xml
@@ -37,13 +37,13 @@
   
   <build>
     <finalName>${project.name}</finalName>
-    <sourceDirectory>${basedir}/src/main/java/</sourceDirectory>
+    <sourceDirectory>${basedir}/src/</sourceDirectory>
     
     <resources>
       <resource>
         <targetPath>.</targetPath>
         <filtering>true</filtering>
-        <directory>${basedir}/src/main/resources/</directory>
+        <directory>${basedir}/src/</directory>
         <includes>
           <include>plugin.yml</include>
           <include>config.yml</include>
@@ -59,7 +59,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+        <version>3.1</version>
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
@@ -77,6 +77,5 @@
   </build>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <bukkit.version>1.6.4-R2.0</bukkit.version>
   </properties>
 </project>
