--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,15 @@
               <scope>system</scope>
           <systemPath>${project.basedir}/lib/Vault.jar</systemPath>
         </dependency>
-        
+ 
+        <dependency>
+          <groupId>com.onarandombox.MultiverseCore</groupId>
+          <artifactId>Vault</artifactId>
+          <version>2.5</version>
+              <scope>system</scope>
+          <systemPath>${project.basedir}/lib/Multiverse-Core-2.5.jar</systemPath>
+        </dependency>   
+                    
   </dependencies>
   
   <build>
